@@ -42,7 +42,10 @@ class @DonutChart
         .style("fill", "#E7E7E7")
         # .on(eventObj);
 
-      textElement = donuts.append('text')
+      textElement = donuts
+        .append("a")
+        .attr("xlink:href", @$container.data('url'))
+        .append('text')
         .attr('class', 'center-txt type')
         .attr('y', @chart_r * -0.16)
         .attr('text-anchor', 'middle')
